small bug in grid responsiveness

--- a/txrx/static/less/bootstrap/less/variables.less
+++ b/txrx/static/less/bootstrap/less/variables.less
@@ -812,7 +812,7 @@
 //## Define the maximum width of `.container` for different screen sizes.
 
 // Small screen / tablet
-@container-tablet:             ((@screen-xs-min + @grid-gutter-width));
+@container-tablet:             ((@screen-sm-min + @grid-gutter-width));
 // For `@screen-sm-min` and up.
 @container-sm:                 @container-tablet;
 
