--- a/txrx/templates/_generic_box.html
+++ b/txrx/templates/_generic_box.html
@@ -2,7 +2,7 @@
 {% if items %}
 <section class="generic_box">
   <h3 class="block_title">{{ title }}</h3>
-  {% for item in items %}
+  {% for item in items|slice:":5" %}
   {% thumbnail item.first_photo|get_override:"square_crop" "75x75" crop="center" as im %}
   <div class="well">
     <a href="{{ item.get_absolute_url }}">
