--- a/txrx/static/less/txrx.less
+++ b/txrx/static/less/txrx.less
@@ -406,3 +406,5 @@ ul.errorlist { color: red; }
 .btn.disabled { color: @gray-light; }
 
 .pagination { display: inline-block; }
+
+.nav-tabs { margin-bottom: 15px; }
