limiting the classes displayed and altering appearance of generic box

--- a/membership/templates/membership/member_detail.html
+++ b/membership/templates/membership/member_detail.html
@@ -33,9 +33,11 @@
     <div id="instructor_classes_{{ term.id }}" class="tab-pane{% if forloop.first %} active{% endif %}">
       <ul class="unstyled">
         {% for session in sessions %}
+        {% ifchanged session.section %}
         <li><a href="{{ session.get_absolute_url }}">
             {{ session.section.course.name }}
         </a></li>
+        {% endifchanged %}
         {% endfor %}
       </ul>
     </div>
