--- a/txrx/templates/_generic_box.html
+++ b/txrx/templates/_generic_box.html
@@ -7,7 +7,7 @@
   <div class="well">
     <a href="{{ item.get_absolute_url }}">
       <img src="{{ im.url }}" />
-      {{ item }}
+      <span class="inlined">{{ item }}</span>
     </a>
   </div>
   {% endthumbnail %}
