--- a/txrx/static/less/txrx.less
+++ b/txrx/static/less/txrx.less
@@ -61,6 +61,14 @@ h3.block_title {
   }
 }
 
+.generic_box {
+  .inlined {
+    display: inline-block;
+    max-width: 245px;
+    vertical-align: middle;
+  }
+}
+
 #flatpage > iframe {
   display: block;
   margin: 0 auto;
