typo was stopping materials from showing on tools

--- a/tool/templates/tool/tool_detail.html
+++ b/tool/templates/tool/tool_detail.html
@@ -29,7 +29,7 @@
     <a href="{{ link.url }}">{{ link.title }}</a><br />
     {% endfor %}
     {% endif %}
-    {% if tool.consumables.all %}
+    {% if tool.materials.all %}
     <h4>Materials used</h4>
     {% for material in tool.materials.all %}
     <a href="{{ material }}">{{ material }}</a><br />
@@ -41,15 +41,9 @@
       <h3 class="block_title">Related Projects</h3>
       {% for thing in tool.things|slice:":6" %}
       {% thumbnail thing.first_photo|get_override:"square_crop" "300x300" crop="center" as im %}
-      <div class="thing thing{{ forloop.counter }} col-xs-6">
+      <div class="thing thing{{ forloop.counter }} col-xs-6 col-sm-4">
         <a href="{{ thing.get_absolute_url }}">
           <img src="{{ im.url }}" />
-          <div class="hover">
-            <div class="title">
-              {{ thing.title }}
-              <div class="author"> by {{ thing.user }}</div>
-            </div>
-          </div>
         </a>
       </div>
       {% endthumbnail %}
