--- a/txrx/static/less/txrx.less
+++ b/txrx/static/less/txrx.less
@@ -48,7 +48,7 @@ h1.page_title {
 h3.block_title {
   color: @gray-dark;
   font-weight: normal;
-  margin: 0 15px 15px;
+  margin: 0 0 15px;
   text-transform: uppercase;
 }
 
