--- a/tool/templates/tool/lab_detail.html
+++ b/tool/templates/tool/lab_detail.html
@@ -8,7 +8,7 @@
 {% block main %}
 <div id="tool_{{ lab.slug }}" class="row">
   {% for tool in lab.tool_set.all %}
-  <div class="tool_well col-sm-4 col-xs-12">
+  <div class="tool_well col-lg-3 col-sm-4 col-xs-12">
     <a href="{{ tool.get_absolute_url }}" class="well">
       {% thumbnail tool.first_photo|get_override:"square_crop" "220x220" crop="center" as im %}
       <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" />
