adding to header

--- a/tool/templates/tool/lab_detail.html
+++ b/tool/templates/tool/lab_detail.html
@@ -3,9 +3,8 @@
 {% load short_codes %}
 
 {% block title %}{{ lab }} Tools{% endblock %}
-{% block header_content %}{{ lab }} Tools{% endblock %}
-
 {% block main %}
+<h1 class="page_title">{{ lab }} Tools</h1>
 <div id="tool_{{ lab.slug }}" class="row">
   {% for tool in lab.tool_set.all %}
   <div class="tool_well col-lg-3 col-sm-4 col-xs-12">
