tool image sizes

--- a/tool/templates/tool/lab_index.html
+++ b/tool/templates/tool/lab_index.html
@@ -7,7 +7,7 @@
 {% block main %}
 <div id="labs" class="row">
   {% for lab in labs %}
-  {% thumbnail lab.first_photo|get_override:"landscape_crop" "400x300" crop="center" as im %}
+  {% thumbnail lab.first_photo|get_override:"landscape_crop" "600x450" crop="center" quality="95" as im %}
   <div class="lab col-md-4 col-sm-6 col-xs-12">
     <a href="{% url "lab_detail" lab.slug lab.id %}">
       <img class="bg" src="{{ im.url }}" alt="" />
