--- a/txrx/static/less/txrx.less
+++ b/txrx/static/less/txrx.less
@@ -84,7 +84,8 @@ h3.block_title {
   }
 }
 .well.success {
-  background-color: #d6e9c6;
+  background-color: lighten(@brand-primary,15%);
+  a,.has_notes span { color: white; }
 }
 
 #memberships {
