adding related classes

--- a/course/templates/course/_enroll_link.html
+++ b/course/templates/course/_enroll_link.html
@@ -1,5 +1,5 @@
 {% if session.section.fee %}
-<div class="price">${{ session.section.fee }}</div>
+<div class="price">${{ session.user_fee }}</div>
 <div class="EnrollLink">
   {% if session.user_enrollment.quantity == 1 %}
   <button class="btn btn-default disabled">Enrolled</button>
