--- a/course/templates/course/_cart.html
+++ b/course/templates/course/_cart.html
@@ -15,6 +15,10 @@ simpleCart.email = "{{ settings.PAYPAL_RECEIVER_EMAIL }}";</script>
         <img src="{{ STATIC_URL }}img/paypal.png"></a>
     </div>
   </div>
+  <center><button class="btn btn-danger return_policy" onclick="$('.return_policy').toggle();return false;">View our return policy</button></center>
+  <div class="alert alert-danger return_policy" style="display:none;">
+    If you can't make a class please contact <a href="mailto:classes@txrxlabs.org">classes@txrxlabs.org</a> to cancel. Cancellations and rescheduling requests must be made at least one week prior to the class for a full refund. Cancellations submitted less than one week before the class will only be refunded if we can fill your slot.
+  </div>
 </div>
 <div class="visible-xs hidden-sm hidden-md hidden-lg">
   <div id="mobileCart" class="alert alert-success"><a href="#cart">View Cart</a></div>
