--- a/course/templates/course/detail.html
+++ b/course/templates/course/detail.html
@@ -13,8 +13,8 @@
     <div class="col-xs-12">
       <h1 class="page_title">{{ session.section.course }}</h1>
       <div class="subjects">
-        <b>Subject{{ session.section.course.subjects|pluralize:"s" }}</b>:
-        {{ session.section.course.subjects.all|join:"," }}
+        <b>Subject{{ session.subjects|pluralize:"s" }}</b>:
+        {{ session.subjects|join:", " }}
       </div>
       <div class="CartBox">
         {% include "course/_enroll_link.html" %}
