--- a/course/templates/course/detail.html
+++ b/course/templates/course/detail.html
@@ -67,11 +67,11 @@
          </span>
          {% endif %}
        </div>
-       {% if session.sessionattachment_set.count %}
+       {% if session.get_files %}
        <div>
          <h2>Relevant files</h2>
-         {% for attachment in session.sessionattachment_set.all %}
-         <a href="{{ attachment.attachment.file.url }}" target="_blank">{{ attachment.attachment.name }}</a><br/>
+         {% for f in session.get_files %}
+         <a href="{{ f.file.url }}" target="_blank">{{ f.name }}</a><br/>
          {% endfor %}
        </div>
        {% endif %}
@@ -118,9 +118,9 @@
    {% if related_sessions %}
    <div class="related_sessions">
      <h4>Checkout these similar classes!</h4>
-     {% for klass in related_sessions %}
+     {% for s in session.related_sessions|slice:":5" %}
      <div>
-       <a href="{{ klass.get_absolute_url }}">{{ klass }}</a>
+       <a href="{{ s.get_absolute_url }}">{{ s }}</a>
      </div>
      {% endfor %}
    </div>
