--- a/txrx/static/less/course.less
+++ b/txrx/static/less/course.less
@@ -155,6 +155,11 @@
   &.in-cart .drop { display: inline-block; }
 }
 
+.notify_course {
+  text-align: center;
+  .btn { white-space: normal; }
+}
+
 .RsvpLink, .EnrollLink {
   display: block;
   position: relative;
